Fixed spacing in HB case study

--- a/css/project-page.css
+++ b/css/project-page.css
@@ -8,7 +8,7 @@ content {
 h1 {
   font-size: 3em;
   font-weight: 500;
-  padding-bottom: .3em;
+
 }
 
 h2 {
@@ -20,16 +20,14 @@ h2 {
 
 h3 {
   font-size: 1.5em;
-  padding-top: 3em;
-  color: #767676;
-
+  padding-top: 1em;
+  color: gray;
 }
 
 h4 {
     font-size: 1.5em;
-    padding-bottom: 2em;
-    padding-top: 2em;
-    text-align: center;
+    padding-top: 1em;
+
 }
 
 content p {
@@ -124,7 +122,9 @@ header {
     max-width: 30%;
 }
 
-
+.insightcont {
+    padding-top: 1em;
+}
 #summary {
     text-align: center;
 }
@@ -164,6 +164,18 @@ span {
     display: inline;
 }
 
+.section {
+    width: 100%;
+
+    display: flex;
+
+    flex-direction: column;
+
+    align-items: flex-start;
+    justify-content: center;
+
+    margin-top: 100px;
+}
 /** PAGINATION **/
 
 .pagination {
